5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1621_2925.log
== TEST (2019-04-01 19:14:05) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
d=2
p=d**y
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p=d**y
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:14:39) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
d=2
p=d**(y)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p=d**(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:15:22) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
p=2**(y)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p=2**(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:15:41) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
p=2**n
print(p)
-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:01) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
d=2
p=d*n
print(p)
-- OUTPUT:
18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:16:11) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
d=2
p=d**n
print(p)
-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:16:36) 
-- CODE:
from math import*
n=int(input("informe a quantidade de bacterias: "))
d=2
p=d**n
print(p)
-- EXECUTION TIME:
0.231949
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8192
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
524288
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
